# optix7course

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
common/gdt/: CMakeLists.txt  gdt.cpp  gdt.h
common/gdt/cmake/: FindOptiX.cmake  configure_build_type.cmake  configure_optix.cmake  run_bin2c.cmake
common/gdt/gdt/: gdt.cu  gdt.h
common/gdt/gdt/math/: AffineSpace.h  LinearSpace.h  vec.h
common/gdt/math/: LinearSpace.h  constants.h
common/glfWindow/: CMakeLists.txt  CUDAFrameBuffer.h  GLFWindow.cpp  GLFWindow.h
example01_helloOptix/: CMakeLists.txt  main.cpp  optix7.h
example02_pipelineAndRayGen/: CMakeLists.txt  CUDABuffer.h  LaunchParams.h  SampleRenderer.cpp  SampleRenderer.h  devicePrograms.cu  main.cpp
example03_inGLFWindow/: CMakeLists.txt  SampleRenderer.cpp  SampleRenderer.h  devicePrograms.cu  main.cpp
example04_firstTriangleMesh/: CMakeLists.txt  LaunchParams.h  SampleRenderer.cpp  SampleRenderer.h  devicePrograms.cu  main.cpp
example05_firstSBTData/: CMakeLists.txt  LaunchParams.h  SampleRenderer.cpp  SampleRenderer.h  devicePrograms.cu  main.cpp  optix7.h
example06_multipleObjects/: CMakeLists.txt  LaunchParams.h  SampleRenderer.cpp  SampleRenderer.h  devicePrograms.cu  main.cpp  optix7.h
example07_firstRealModel/: CMakeLists.txt  Model.cpp  Model.h  SampleRenderer.cpp  SampleRenderer.h  devicePrograms.cu  main.cpp
example08_addingTextures/: CMakeLists.txt  LaunchParams.h  Model.cpp  Model.h  SampleRenderer.cpp  SampleRenderer.h  devicePrograms.cu  main.cpp
example09_shadowRays/: CMakeLists.txt  LaunchParams.h  Model.cpp  Model.h  SampleRenderer.cpp  SampleRenderer.h  devicePrograms.cu  main.cpp
example10_softShadows/: CMakeLists.txt  LaunchParams.h  Model.cpp  Model.h  SampleRenderer.cpp  SampleRenderer.h  devicePrograms.cu  main.cpp
example11_denoise/: CMakeLists.txt  CUDABuffer.h  LaunchParams.h  Model.cpp  SampleRenderer.cpp  SampleRenderer.h  devicePrograms.cu  main.cpp
example11_denoiseColorOnly/: CMakeLists.txt  CUDABuffer.h  LaunchParams.h  Model.cpp  Model.h  SampleRenderer.cpp  SampleRenderer.h  devicePrograms.cu
example12_denoiseSeparateChannels/: CMakeLists.txt  LaunchParams.h  Model.cpp  SampleRenderer.cpp  SampleRenderer.h  devicePrograms.cu  main.cpp  optix7.h  toneMap.cu
example1_helloOptix/: CMakeLists.txt  main.cpp  optix7.h
example1_openWindow/: CMakeLists.txt  main.cpp
example2_pipelineAndRayGen/: CMakeLists.txt  CUDABuffer.h  LaunchParams.h  SampleRenderer.cpp  devicePrograms.cu  main.cpp  optix7.h
example3_inGLFWindow/: CMakeLists.txt  SampleRenderer.cpp  devicePrograms.cu  main.cpp
example4_firstTriangleMesh/: CMakeLists.txt  LaunchParams.h  SampleRenderer.cpp  SampleRenderer.h  main.cpp
example5_firstSBTData/: CMakeLists.txt  LaunchParams.h  SampleRenderer.cpp  main.cpp
example5_multipleObjectsAndSBTData/: CMakeLists.txt  LaunchParams.h  SampleRenderer.cpp
example6_multipleObjects/: SampleRenderer.cpp  SampleRenderer.h  devicePrograms.cu  main.cpp
example7_firstRealModel/: CMakeLists.txt  Model.cpp  Model.h  SampleRenderer.cpp  SampleRenderer.h  devicePrograms.cu  main.cpp
example8_addingTextures/: CMakeLists.txt  LaunchParams.h  Model.cpp  Model.h  SampleRenderer.cpp  SampleRenderer.h  devicePrograms.cu  main.cpp
programming_along/: CMakeLists.txt  LaunchParams.h  Renderer.cpp  Renderer.h  deviceCode.cu  main.cpp
programming_along/SbtStructs/: CMakeLists.txt  SbtStructs.h
programming_along/scene/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  IDynamicElement.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  RotatingLight.cpp  RotatingLight.h
programming_along/scene/Light/: Light.cpp  Light.h  QuadLight.cpp  QuadLight.h  RotatingLight.cpp  RotatingLight.h
programming_along/util/: CUDABuffer.h  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  SbtStructs.h  Texture.h  Util.cpp  Util.h  Window.cpp  Window.h
